<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_news"
        android:icon="@drawable/ic_message"
        android:title="@string/news"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="#ffffff"
        app:cnb_textColor="#ffffff" />
    <item
        android:id="@+id/menu_item_sprot"
        android:icon="@drawable/ic_sports_soccer_24"
        android:title="@string/sport"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="#ffffff"
        app:cnb_textColor="#ffffff" />
    <item
        android:id="@+id/menu_item_bussiness"
        android:icon="@drawable/ic_business"
        android:title="@string/bussiness"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="#ffffff"
        app:cnb_textColor="#ffffff" />
    <item
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/ic_menu"
        android:title="@string/settings"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="#ffffff"
        app:cnb_textColor="#ffffff" />

</menu>