<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/dim_10dp"
      android:layout_marginTop="@dimen/dim_10dp"
      android:background="@color/gray"
      android:gravity="center"
      android:text="@string/settings"
      android:textColor="@android:color/black"
      android:textStyle="bold"
      android:textSize="@dimen/txt_24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

  >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    android:orientation="vertical">
  <TextView
      android:id="@+id/textView2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="140dp"
      android:text="@string/change_country"
      android:textColor="@android:color/black"
      android:textSize="@dimen/txt_24sp"
      tools:layout_editor_absoluteX="16dp" />

  <EditText
      android:id="@+id/settings_home_fragment_editText"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dim_50dp"
      android:layout_marginTop="8dp"
      android:background="@drawable/shape_edit_text"
      android:hint="Ex ,eg"
      android:paddingStart="10dp"

      tools:layout_editor_absoluteX="0dp" />
  </LinearLayout>
</ScrollView>
  <Button
      android:id="@+id/settings_home_fragment_btn"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dim_50dp"
      android:background="@color/colorPrimary"
      android:text="@string/confirm"
      android:textColor="@android:color/white"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
       />
</androidx.constraintlayout.widget.ConstraintLayout>